--- a/starter/Css/style.css
+++ b/starter/Css/style.css
@@ -33,6 +33,7 @@
 html {
 	scroll-behavior: smooth;
 	background-color: rgb(198, 192, 183);
+	cursor: pointer;
 }
 
 /* CSS Resets */
@@ -274,4 +275,26 @@ div.project-container .project-card {
 	padding: 0.938rem;
 	border-radius: 5px;
 	box-shadow: 0 3px 10px var(--secondary-shadow);
+}
+/* styling more on placeholder  */
+.contact-form-container label {
+	line-height: 2.7em;
+	font-weight: var(--bold-font);
+	color: var(--primary-color);
+}
+
+.contact-form-container textarea {
+	min-height: 6.25rem;
+	font-size: 14px;
+}
+
+.contact-form-container .input-field {
+	width: 100%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-radius: 5px;
+
+	border: 2px outset var(--primary-color);
+	font-size: 0.875rem;
+	outline: none;
 }
