--- a/starter/Css/style.css
+++ b/starter/Css/style.css
@@ -305,3 +305,43 @@ div.project-container .project-card {
 	padding: 0.5rem;
 	color: var(--primary-color);
 }
+
+/* button style */
+.submit-btn {
+	width: 100%;
+	padding: 10px;
+	margin: 10px 0;
+	background-color: #fff;
+	border: 2px solid var(--primary-color);
+	border-radius: 5px;
+	font-size: 1rem;
+	font-weight: var(--bold-font);
+	transition: var(--transition);
+}
+.submit-btn:hover {
+	/* background-color: var(--primary-color); */
+	border: 2px solid var(--primary-color);
+	cursor: pointer;
+	background-color: #26a993;
+}
+
+/* styling for social media  */
+.socials {
+	display: flex;
+	flex-direction: column;
+	position: fixed;
+	right: 3%;
+	bottom: 50%;
+}
+
+.socicon {
+	width: 4rem;
+	height: 4rem;
+}
+/* footer styling */
+footer {
+	background-color: var(--bg-color);
+	padding: 1.25rem;
+	text-align: center;
+	margin: 2rem 0 0;
+}
