--- a/starter/Css/style.css
+++ b/starter/Css/style.css
@@ -32,7 +32,7 @@
 
 html {
 	scroll-behavior: smooth;
-	background-color: rgba(217, 140, 32, 0.13);
+	background-color: rgba(217, 140, 32, 0.13) 38, 100, 50;
 	cursor: pointer;
 }
 
@@ -331,7 +331,7 @@ div.project-container .project-card {
 	flex-direction: column;
 	position: fixed;
 	right: 3%;
-	bottom: 50%;
+	bottom: 30%;
 }
 
 .socicon {
@@ -344,4 +344,18 @@ footer {
 	padding: 1.25rem;
 	text-align: center;
 	margin: 2rem 0 0;
+}
+/* scroll up icon footer section */
+.scroll-up {
+	position: fixed;
+	right: 0.7%;
+	bottom: 3%;
+	box-sizing: border-box;
+
+	cursor: pointer;
+}
+
+.up-arrow {
+	width: 3rem;
+	height: 3rem;
 }
