--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
 	--normal-font: 400;
 	--bold-font: 700;
 	--bolder-font: 900;
-	--bg-color: #26a993#fcfcfc;
-	--primary-color: #191918;
-	--secondary-color: #ff7235;
-	--primary-shadow: #8b8eaf;
-	--secondary-shadow: #a17a69;
+	--bg-color: hwb(0 100% 0% / 0.526);
+	--primary-color: hwb(180 9% 90%);
+	--secondary-color: rgb(190, 53, 53);
+	--primary-shadow: #7e7866;
+	--secondary-shadow: #140f05;
 	--bottom-margin: 0.5rem;
 	--bottom-margin-2: 1rem;
 	--line-height: 1.7rem;
@@ -24,6 +24,13 @@
 	@import url(https://www.linkedin.com/in/janeezy/);
 }
 
+/* logoicon for jd */
+#logo-icon {
+	position: fixed;
+	left: 3%;
+	bottom: -10%;
+	display: block;
+}
 .container {
 	align-items: flex-end;
 	border-radius: 20px;
@@ -32,7 +39,8 @@
 
 html {
 	scroll-behavior: smooth;
-	background-color: rgb(198, 192, 183);
+	background-image: url('../images/background-2.jpg');
+	cursor: pointer;
 }
 
 /* CSS Resets */
@@ -105,6 +113,10 @@ nav ul li {
 	display: none;
 }
 /* image styling */
+.styling-image {
+	border-radius: 0%;
+}
+
 img {
 	border-radius: 50%;
 	padding: 3%;
@@ -199,4 +211,192 @@ img {
 	height: 11.25rem;
 }
 
-/* project */
+/* project  styling*/
+.projects {
+	background-color: var(--bg-color);
+	padding: 32px 0;
+	margin-top: 2rem;
+}
+
+.project-pic {
+	width: 65%;
+	height: 60%;
+}
+
+.projects-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+/* project title */
+.projects-title {
+	text-align: center;
+	margin-bottom: 2rem;
+}
+
+.project-container {
+	text-align: center;
+	width: 28.875rem;
+	padding: 1rem;
+	background-color: #cbd3d1;
+}
+div.project-container .project-card {
+	box-sizing: border-box;
+	width: fit-content;
+}
+
+/* adding box shadow to projects  */
+.project-container p {
+	padding: 0.2rem;
+}
+
+.project-title {
+	margin-bottom: var(--bottom-margin);
+}
+
+.project-details {
+	margin-bottom: var(--bottom-margin);
+}
+
+.project-card {
+	background-color: #fff;
+	border-radius: 11px;
+	box-shadow: 0 3px 10px var(--primary-shadow);
+	padding: 20px;
+	margin: 10px;
+}
+
+/* styling contact  */
+.contact {
+	margin-top: 2rem;
+}
+
+.contact h2 {
+	text-align: center;
+	margin-bottom: var(--bottom-margin-2);
+}
+
+.contact-form-container {
+	max-width: 40.75rem;
+	margin: 0 auto;
+	padding: 0.938rem;
+	border-radius: 5px;
+	box-shadow: 0 3px 10px var(--secondary-shadow);
+}
+/* styling more on placeholder  */
+.contact-form-container label {
+	line-height: 2.7em;
+	font-weight: var(--bold-font);
+	color: var(--primary-color);
+}
+
+.contact-form-container textarea {
+	min-height: 6.25rem;
+	font-size: 14px;
+}
+
+.contact-form-container .input-field {
+	width: 100%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-radius: 5px;
+
+	border: 2px outset var(--primary-color);
+	font-size: 0.875rem;
+	outline: none;
+}
+
+/* placeholder styling */
+.input-field::placeholder {
+	padding: 0.5rem;
+	color: var(--primary-color);
+}
+
+/* button style */
+.submit-btn {
+	width: 100%;
+	padding: 10px;
+	margin: 10px 0;
+	background-color: #fff;
+	border: 2px solid var(--primary-color);
+	border-radius: 5px;
+	font-size: 1rem;
+	font-weight: var(--bold-font);
+	transition: var(--transition);
+}
+.submit-btn:hover {
+	/* background-color: var(--primary-color); */
+	border: 2px solid var(--primary-color);
+	cursor: pointer;
+	background-color: #26a993;
+}
+
+/* styling for social media  */
+.socials {
+	display: flex;
+	flex-direction: column;
+	position: fixed;
+	right: 3%;
+	bottom: 30%;
+}
+
+.socicon {
+	width: 4rem;
+	height: 4rem;
+}
+/* footer styling */
+footer {
+	background-color: var(--bg-color);
+	padding: 1.25rem;
+	text-align: center;
+	margin: 2rem 0 0;
+}
+/* scroll up icon footer section */
+.scroll-up {
+	position: fixed;
+	right: 0.7%;
+	bottom: 3%;
+	box-sizing: border-box;
+
+	cursor: pointer;
+}
+
+.up-arrow {
+	width: 3rem;
+	height: 3rem;
+}
+/* creating responsesiveness */
+@media screen and (max-width: 720px) {
+	html {
+		cursor: pointer;
+	}
+	/*changes reflects on screen with a
+		width of 720px and below*/
+	nav {
+		padding: 1.5rem 1rem;
+	}
+
+	nav ul {
+		position: fixed;
+		background-color: var(--bg-color);
+		flex-direction: column;
+		top: 86px;
+		left: 10%;
+		width: 80%;
+		text-align: center;
+		transform: translateX(90%);
+		transition: transform 0.5s ease-in;
+	}
+
+	nav ul li {
+		margin: 8px;
+	}
+	.burger-menu {
+		display: block;
+	}
+
+	nav ul.show {
+		transform: translateX(0);
+	}
+}
