--- a/starter/Css/style.css
+++ b/starter/Css/style.css
@@ -9,8 +9,8 @@
 	--bg-color: hwb(0 100% 0% / 0.526);
 	--primary-color: hwb(180 9% 90%);
 	--secondary-color: rgb(190, 53, 53);
-	--primary-shadow: #7e7866;
-	--secondary-shadow: #140f05;
+	--primary-shadow: #937006;
+	--secondary-shadow: #0d0d0d;
 	--bottom-margin: 0.5rem;
 	--bottom-margin-2: 1rem;
 	--line-height: 1.7rem;
