--- a/starter/Css/style.css
+++ b/starter/Css/style.css
@@ -6,11 +6,11 @@
 	--normal-font: 400;
 	--bold-font: 700;
 	--bolder-font: 900;
-	--bg-color: hwb(0 100% 0% / 0.526);
-	--primary-color: hwb(180 9% 90%);
-	--secondary-color: rgb(190, 53, 53);
-	--primary-shadow: #937006;
-	--secondary-shadow: #0d0d0d;
+	--bg-color: hwb(48 94% 4% / 0.11);
+	--primary-color: hwb(180 23% 74%);
+	--secondary-color: rgb(192, 111, 31);
+	--primary-shadow: #08090977;
+	--secondary-shadow: #090909;
 	--bottom-margin: 0.5rem;
 	--bottom-margin-2: 1rem;
 	--line-height: 1.7rem;
@@ -19,9 +19,19 @@
 /* Variables end */
 
 /* logo styling */
-.logo1 {
+.logo1 :hover {
 	cursor: pointer;
-	@import url(https://www.linkedin.com/in/janeezy/);
+	color: #d79210c3;
+}
+
+/* logo styling */
+
+#h1-tag::first-letter {
+	color: rgb(110, 86, 25);
+}
+
+#h1-tag ::shadow {
+	color: bisque;
 }
 
 /* logoicon for jd */
@@ -39,8 +49,10 @@
 
 html {
 	scroll-behavior: smooth;
-	background-image: url('../images/background-2.jpg');
+	/* background-image: url('../images/background-2.jpg'); */
 	cursor: pointer;
+	background-size: cover;
+	position: absolute;
 }
 
 /* CSS Resets */
@@ -128,7 +140,7 @@ img {
 	box-shadow: inset rgb(184, 181, 178);
 }
 
-.bio-title {
+.bio-title :hover {
 	padding: 7px;
 	margin-top: 4px;
 	justify-self: center;
@@ -168,6 +180,7 @@ img {
 
 .logo2 {
 	width: 100%;
+	position: static;
 	border-radius: 0%;
 	box-sizing: border-box;
 	padding: 1px;
@@ -340,13 +353,14 @@ div.project-container .project-card {
 	display: flex;
 	flex-direction: column;
 	position: fixed;
-	right: 3%;
-	bottom: 30%;
+	right: 2%;
+	bottom: 20%;
 }
 
 .socicon {
 	width: 2rem;
 	height: 2rem;
+	position: sticky;
 }
 /* footer styling */
 footer {
