--- a/starter/Css/style.css
+++ b/starter/Css/style.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap');
 
 /* Variables */
+/* Variables */
 :root {
 	--font-family: 'Roboto', sans-serf;
 	--normal-font: 400;
 	--bold-font: 700;
 	--bolder-font: 900;
-	--bg-color: hwb(39 85% 8%);
-	--primary-color: hwb(60 5% 94%);
-	--secondary-color: rgb(187, 53, 53);
-	--primary-shadow: #a39c9ceb;
-	--secondary-shadow: #871e1e;
+	--bg-color: #fcfcfc;
+	--primary-color: #2b2b2d;
+	--secondary-color: #ff7235;
+	--primary-shadow: #8b8eaf;
+	--secondary-shadow: #a17a69;
 	--bottom-margin: 0.5rem;
 	--bottom-margin-2: 1rem;
 	--line-height: 1.7rem;
@@ -27,7 +28,7 @@
 /* logo styling */
 
 #h1-tag::first-letter {
-	color: rgb(216, 157, 9);
+	color: rgb(237, 172, 9);
 }
 
 #h1-tag ::shadow {
@@ -49,12 +50,13 @@
 
 html {
 	scroll-behavior: smooth;
-	background-image: url('../images/background-2.jpg');
+	/* background-image: url('../images/background-2.jpg'); */
 	cursor: pointer;
 	background-size: cover;
 	position: absolute;
 }
 
+/* CSS Resets */
 /* CSS Resets */
 * {
 	margin: 0;
@@ -137,7 +139,7 @@ img {
 	justify-self: unset;
 	height: 300px;
 	box-sizing: border-box;
-	box-shadow: inset rgb(184, 181, 178);
+	box-shadow: inset rgb(237, 230, 223);
 }
 
 .bio-title :hover {
@@ -156,7 +158,6 @@ img {
 	max-width: 68.75rem;
 	margin: auto;
 }
-
 .hero img {
 	height: 37.5rem;
 	width: 37.5rem;
@@ -189,9 +190,6 @@ img {
 
 /* styling section */
 .more-about {
-	text-align: start;
-	text-shadow: hsla(45, 24%, 45%, 0.837);
-	font-size: medium;
 	background-color: var(--bg-color);
 	padding: 1rem 6rem;
 }
@@ -226,8 +224,16 @@ img {
 	width: 11.875rem;
 	height: 11.25rem;
 }
+.icon-card {
+	background-color: #fff;
+	border-radius: 11px;
+	box-shadow: 0 3px 10px var(--secondary-shadow);
+	padding: 20px;
+	margin: 10px;
+}
 
 /* project  styling*/
+
 .projects {
 	background-color: var(--bg-color);
 	padding: 32px 0;
@@ -241,22 +247,25 @@ img {
 
 .projects-container {
 	display: flex;
+	flex-direction: column;
+	margin: auto;
 	align-items: center;
 	justify-content: center;
+	width: 30.875rem;
+	text-align: center;
+	padding: 1rem;
 }
 
 /* project title */
-.projects-title {
-	text-align: center;
-	margin-bottom: 2rem;
+.project-link {
+	color: #a17a69;
 }
 
-.project-container {
+.projects-title {
 	text-align: center;
-	width: 28.875rem;
-	padding: 1rem;
-	background-color: #cbd3d1;
+	margin-bottom: 1rem;
 }
+
 div.project-container .project-card {
 	box-sizing: border-box;
 	width: fit-content;
@@ -264,7 +273,7 @@ div.project-container .project-card {
 
 /* adding box shadow to projects  */
 .project-container p {
-	padding: 0.2rem;
+	padding: 0.4rem;
 }
 
 .project-title {
