--- a/starter/Css/style.css
+++ b/starter/Css/style.css
@@ -447,6 +447,10 @@ footer {
 	.hero img {
 		height: 37.5rem;
 		width: 30rem;
+		gap: 0;
+	}
+	img.hero-img {
+		margin-top: 4rem;
 	}
 
 	.bio {
@@ -480,4 +484,19 @@ footer {
 	.contact-form-container {
 		max-width: 23.75rem;
 	}
+}
+
+.scroll-up {
+	position: fixed;
+	right: 0.5%;
+	bottom: 3%;
+	cursor: pointer;
+}
+
+.up-arrow {
+	width: 3rem;
+	height: 3rem;
+}
+@media screen and (max-width: 720px) {
+	/*changes reflects on screen with a width of 720px and below*/
 }
